fix purging of scrollbar styles, auto hide improvements, tailwind autocomplete setting

--- a/src/index.css
+++ b/src/index.css
@@ -58,16 +58,16 @@
     }
   }
 
-  ::-webkit-scrollbar {
+  *::-webkit-scrollbar {
     @apply w-2 h-2;
   }
-  ::-webkit-scrollbar-thumb {
+  *::-webkit-scrollbar-thumb {
     @apply bg-gray-400 rounded-md;
   }
-  ::-webkit-scrollbar-thumb:hover {
+  *::-webkit-scrollbar-thumb:hover {
     @apply bg-action-normal;
   }
-  ::-webkit-scrollbar-track {
+  *::-webkit-scrollbar-track {
     @apply bg-blueGray-200;
     border-radius: 16px;
   }
